--- a/css/main.css
+++ b/css/main.css
@@ -1128,7 +1128,7 @@ h1.intro-header::before {
 #header {
   width: 100%;
   height: 72px;
-  background-color: #111111;
+  background-color: #0b394a;
   position: fixed;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -1504,13 +1504,13 @@ h1.intro-header::before {
   display: block;
   position: absolute;
   right: 0;
-  top: 50%;
+  top: 59%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   padding-top: 21rem;
   z-index: 500;
-  width: 50%;
+  width: 40%;
   text-align: right;
 }
 
