--- a/css/main.css
+++ b/css/main.css
@@ -1127,7 +1127,7 @@ h1.intro-header::before {
 
 #header {
   width: 100%;
-  height: 72px;
+  height: 80px;
   background-color: #0b394a;
   position: fixed;
   left: 50%;
@@ -1143,7 +1143,7 @@ h1.intro-header::before {
  * ------------------------------------------------------------------- */
 
 .header-logo {
-  position: absolute;
+  /* position: absolute;
   left: 40px;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -1151,9 +1151,16 @@ h1.intro-header::before {
   transform: translateY(-50%);
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  z-index: 501;
+  z-index: 501; */
+  position: absolute;
+  left: 80px;
+  top: 6%;
+  width: 221px;
+  padding: 3px 0;
 }
-
+.header-logo img{
+  max-width: 63%;
+}
 .header-logo a {
   display: block;
   margin: 0;
@@ -1504,7 +1511,7 @@ h1.intro-header::before {
   display: block;
   position: absolute;
   right: 0;
-  top: 59%;
+  top: 56%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
